--- a/my-website/src/css/custom.css
+++ b/my-website/src/css/custom.css
@@ -19,13 +19,58 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
+  --ifm-background-color: #000000; /* AMOLED Black background */
+  --ifm-color: #ffffff; /* White text color */
+  --ifm-color-primary: #9268d1;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --docusaurus-highlighted-code-line-bg: rgba(255, 255, 255, 0.1); /* Adjusted for white text */
 }
 
+html[data-theme='dark'] {
+  background-color: #000000 !important; /* AMOLED Black background */
+  color: #ffffff !important; /* White text color */
+}
+
+/* Target the footer in both light and dark themes */
+.footer {
+  background-color: #1a1a1a; /* Set to any dark color you prefer */
+}
+
+/* If you want a different color for the dark theme */
+[data-theme='dark'] .footer {
+  background-color: #040000; /* AMOLED Black background */
+}
+
+/* Target the navbar in both light and dark themes */
+.navbar {
+  background-color: #1a1a1a; /* Set to any dark color you prefer */
+}
+
+/* If you want a different color for the dark theme */
+[data-theme='dark'] .navbar {
+  background-color: #090013; /* AMOLED Black background */
+}
+
+/* Change the color of bold text in light mode */
+strong {
+  color: #ff0000; /* Red color for bold text */
+}
+
+/* Change the color of bold text in dark mode */
+[data-theme='dark'] strong {
+  color: #00df00; /* Green color for bold text in dark mode */
+}
+
+em {
+  color: #0000ff; /* Blue color for italic text */
+}
+
+/* Change the color of italic text in dark mode */
+[data-theme='dark'] em {
+  color: #ffff00; /* Yellow color for italic text in dark mode */
+}
